# template-this

./: .gitignore  LICENSE  README.md  check.ps1  mypy.ini  pyproject.toml
examples/.cache/template-this/: .flake8  .pylintrc  Makefile  check.ps1  poetry.yml  pyproject.toml  tt.yml
template_this/: github.py  paths.py  poetry_manager.py  project_builder.py  settings.py  vscode_manager.py
template_this/cli/: __init__.py
template_this/dependency_manager/: __init__.py  poetry_manager.py  project_manager.py  uv_manager.py
