
[project]
name = "template-this"
version = "0.3.7"
description = ""
authors = [{name = "NyxAether", email = "contact.nyxhemera@gmail.com"}]
readme = "README.md"
packages = [{include = "template_this"}]

requires-python = ">= 3.11"
dependencies = [
    "click>=8.1.8",
    "jinja2>=3.1.5",
    "pydantic>=2.10.4",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
  "mypy",
  "ruff",
  "types-pyyaml",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    # flake8-builtins
    "A",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.scripts]
tt = "template_this.cli:main"
